tests/baselines/reference/parserErrorRecovery_ParameterList3.errors.txt
==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ParameterLists/parserErrorRecovery_ParameterList3.ts (1 errors) ====
    function f(a,) {
                ~
!!! error TS1009: Trailing comma not allowed.
    }